# Math

./: CMakeLists.txt
include/math/: particle.hpp  precision.hpp  vec3.hpp
src/: CMakeLists.txt  particle.cpp
